Fixed tag class from overlapping logout button

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -421,7 +421,8 @@ hr{
   z-index: 3;
   width: 100%;
   text-align: center;
-  padding: 6% 0 0 0;
+  margin: 6% 0 0 0;
+  // padding: 6% 0 0 0;
 }
 
 .tag a.active{
